src/main/java/com/example/Demo/errors/exception/users/UserNotFoundException.java
package com.example.Demo.errors.exception.users;

public class UserNotFoundException extends RuntimeException{
    public UserNotFoundException(String message){
        super(message);
    }
}
